--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>React app</title>
-	</head>
-	<body>
-		<div id="app"></div>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>React app</title>
+   </head>
+   <body>
+      <div id="app"></div>
 
-		<script type="text/javascript" src="../dist/app.bundle.js"></script>
-	</body>
+      <% if(process.env.NODE_ENV === 'production') { %>
+      <script
+         crossorigin
+         src="https://unpkg.com/react@16/umd/react.production.min.js"
+      ></script>
+      <script
+         crossorigin
+         src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"
+      ></script>
+      <% } %>
+      <script type="text/javascript" src="../dist/app.bundle.js"></script>
+   </body>
 </html>
